fix: corrigir width e letter-spacing do header

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -29,10 +29,11 @@ header {
       margin-inline: 0;
       margin-left: 8.375rem;
       gap: 0.75rem;
-      width: 31.8125rem;
+      width: 31.75rem;
 
       & h1 {
         font: var(--display-large);
+        letter-spacing: -0.04em;
       }
     }
   }
